# HACK

./: .gitignore  .gitmodules  README.md  llama4.py  matmul_analysis.md  matmul_cutlass.cu  matmul_ncu.py  modeling_llama.py  run_llama3.1-8b.ipynb  run_llama3.1-8b.py  test.ipynb
docs/: speedup_analysis.md
matmul/: CMakeLists.txt
plot_scripts/: plot_singular_values.py  plot_speedup.py  plot_summary_visualization.py
